--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "core-js": "^3.8.3",
         "vue": "^3.0.4",
         "vue-router": "^4.0.3",
-        "vuex": "^4.0.0"
+        "vuex": "^4.0.0",
+        "axios": "^0.21.1"
     },
     "devDependencies": {
         "@babel/core": "^7.12.16",
